feat：实现环境配置、事务管理及类型别名注册功能